--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -11,6 +11,7 @@ MarkupSafe==2.1.2
 packaging==23.0
 pluggy==1.0.0
 psycopg2==2.9.5
+psycopg2-binary==2.9.5
 pytest==7.2.1
 pytest-flask==1.2.0
 pytest-freezegun==0.4.2
