--- a/api/.env
+++ b/api/.env
@@ -1,5 +1,4 @@
-DB_USER=postgres
-DB_PASS=jyhSiCYCbgNBo0QN
-DB_HOST=db.ujcuafxujckectubaajt.supabase.co
-DB_NAME=postgres
-DB_PORT=5432
+DB_USER=pfrn
+DB_PASS=8fLLDmDIVEKGrKltLwiXdmuWyPCIiWTE
+DB_HOST=dpg-cg6bqdpmbg5ab7k57id0-a.ohio-postgres.render.com
+DB_NAME=pfrn
