--- a/api/.env
+++ b/api/.env
@@ -2,3 +2,5 @@ DB_USER=pfrn
 DB_PASS=8fLLDmDIVEKGrKltLwiXdmuWyPCIiWTE
 DB_HOST=dpg-cg6bqdpmbg5ab7k57id0-a.ohio-postgres.render.com
 DB_NAME=pfrn
+
+FLASK_APP=__init__
