--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -4,18 +4,21 @@ Flask==2.2.3
 Flask-Cors==3.0.10
 Flask-SQLAlchemy==3.0.3
 freezegun==1.2.2
+gunicorn==20.1.0
 iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
 packaging==23.0
 pluggy==1.0.0
+psycopg2==2.9.5
 psycopg2-binary==2.9.5
 pytest==7.2.1
+pytest-env==0.8.1
 pytest-flask==1.2.0
 pytest-freezegun==0.4.2
 python-dateutil==2.8.2
-python-dotenv==1.0.0
+python-dotenv==0.21.1
 six==1.16.0
 SQLAlchemy==2.0.3
 typing_extensions==4.5.0
